--- a/WpfApp2/View/MainUserControl/LoginUC.xaml
+++ b/WpfApp2/View/MainUserControl/LoginUC.xaml
@@ -1,46 +1,126 @@
-﻿<UserControl x:Class="WpfApp2.View.MainUserControl.LoginUC"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:local="clr-namespace:WpfApp2.View.MainUserControl" xmlns:viewmodel="clr-namespace:WpfApp2.ViewModel"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+﻿<UserControl
+    x:Class="WpfApp2.View.MainUserControl.LoginUC"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:WpfApp2.View.MainUserControl"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewmodel="clr-namespace:WpfApp2.ViewModel"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    FontFamily="Azonix"
+    mc:Ignorable="d">
     <UserControl.Resources>
-        <viewmodel:LoginUCViewModel x:Key="viewModel"/>
+        <viewmodel:LoginUCViewModel x:Key="viewModel" />
     </UserControl.Resources>
     <Grid DataContext="{StaticResource viewModel}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="70"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="70" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Image Source="/Images/Döner_Kebab_in_Istanbul.jpg"
-               Stretch="UniformToFill"
-               Grid.RowSpan="2"/>
-        <Border Grid.Row="1"
-                VerticalAlignment="Center"
+        <Image
+            Grid.RowSpan="2"
+            Opacity="1"
+            Source="/Images/ui-bg.jpg"
+            Stretch="UniformToFill" />
+        <Border
+            Width="110"
+            Height="40"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Background="#FFF4F6F8"
+            CornerRadius="20">
+            <TextBlock
+                Grid.Row="0"
                 HorizontalAlignment="Center"
-                Width="400"
-                Height="280"
-                Background="Wheat"
-                Effect="{StaticResource MaterialDesignElevationShadow16}">
-            <StackPanel HorizontalAlignment="Center"
-                        VerticalAlignment="Center">
+                VerticalAlignment="Center"
+                Effect="{StaticResource MaterialDesignElevationShadow1}"
+                FontSize="25"
+                Foreground="White"
+                Text="auth" />
+        </Border>
+
+        <Button
+            Grid.Row="0"
+            Margin="0,7,0,0"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Top"
+            Click="Button_Click"
+            Cursor="Hand"
+            Style="{StaticResource MaterialDesignIconButton}">
+            <materialDesign:PackIcon Foreground="White" Kind="Close" />
+        </Button>
+        <Border
+            Grid.Row="1"
+            Width="400"
+            Height="280"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Background="#FFF4F6F8"
+            CornerRadius="30"
+            Effect="{StaticResource MaterialDesignElevationShadow16}">
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
                 <StackPanel Orientation="Horizontal">
-                    <materialDesign:PackIcon Kind="Person"
-                                             Margin="0 5 2 0"/>
-                    <TextBox materialDesign:HintAssist.Hint="{Binding Path=LoginHint}"
-                             Width="120"/>
+                    <materialDesign:PackIcon
+                        Margin="0,2,2,0"
+                        Foreground="LightBlue"
+                        Kind="Person" />
+                    <TextBox
+                        Width="120"
+                        materialDesign:HintAssist.Hint="{Binding Path=LoginHint}"
+                        BorderBrush="LightBlue"
+                        Foreground="Gray" />
                 </StackPanel>
 
-                <StackPanel Orientation="Horizontal"
-                            Margin="0 5 0 0">
-                    <materialDesign:PackIcon Kind="Key"
-                                             Margin="0 5 2 0"/>
-                    <PasswordBox materialDesign:HintAssist.Hint="{Binding Path=PasswordHint}"
-                             Width="120"/>
+                <StackPanel Margin="0,5,0,5" Orientation="Horizontal">
+                    <materialDesign:PackIcon
+                        Margin="0,2,2,0"
+                        Foreground="LightBlue"
+                        Kind="Key" />
+                    <PasswordBox
+                        Width="120"
+                        materialDesign:HintAssist.Hint="{Binding Path=PasswordHint}"
+                        BorderBrush="LightBlue"
+                        Foreground="Gray" />
                 </StackPanel>
+                <Button
+                    x:Name="SignInBtn"
+                    Width="100"
+                    Height="17"
+                    Margin="0,0,0,1"
+                    Padding="0"
+                    HorizontalAlignment="Center"
+                    Click="SignInBtn_Click"
+                    Style="{StaticResource MaterialDesignFlatButton}">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon Kind="Login" />
+                        <TextBlock
+                            Margin="5,1,0,0"
+                            VerticalAlignment="Center"
+                            FontSize="15"
+                            Text="Sign in" />
+                    </StackPanel>
+                </Button>
+                <Button
+                    Height="15"
+                    Padding="0"
+                    HorizontalAlignment="Center"
+                    Style="{StaticResource MaterialDesignFlatButton}">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon
+                            Width="10"
+                            Foreground="Gray"
+                            Kind="Register" />
+                        <TextBlock
+                            Margin="1,1,0,0"
+                            VerticalAlignment="Center"
+                            FontSize="10"
+                            Foreground="Gray"
+                            Text="Sign up"
+                            TextDecorations="Underline" />
+                    </StackPanel>
+                </Button>
             </StackPanel>
         </Border>
     </Grid>
