--- a/WpfApp2/View/MainUserControl/LoginUC.xaml
+++ b/WpfApp2/View/MainUserControl/LoginUC.xaml
@@ -35,6 +35,7 @@
                 Grid.Row="0"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
+                FontFamily="Azonix"
                 FontSize="25"
                 Foreground="DeepSkyBlue"
                 Text="auth" />
@@ -42,7 +43,7 @@
 
         <Button
             Grid.Row="0"
-            Margin="0,7,0,0"
+            Margin="0,5,0,0"
             HorizontalAlignment="Right"
             VerticalAlignment="Top"
             Click="Button_Click"
@@ -73,6 +74,7 @@
                         VerticalAlignment="Center"
                         materialDesign:HintAssist.Hint="{Binding Path=LoginHint}"
                         BorderBrush="DeepSkyBlue"
+                        FontFamily="Azonix"
                         FontSize="16"
                         Foreground="Gray" />
                 </StackPanel>
@@ -90,6 +92,7 @@
                         VerticalAlignment="Center"
                         materialDesign:HintAssist.Hint="{Binding Path=PasswordHint}"
                         BorderBrush="DeepSkyBlue"
+                        FontFamily="Azonix"
                         FontSize="16"
                         Foreground="Gray" />
                 </StackPanel>
@@ -107,6 +110,7 @@
                         <TextBlock
                             Margin="2,1,0,0"
                             VerticalAlignment="Center"
+                            FontFamily="Azonix"
                             FontSize="15"
                             Text="Sign in" />
                     </StackPanel>
@@ -127,6 +131,7 @@
                         <TextBlock
                             Margin="1,1,0,0"
                             VerticalAlignment="Center"
+                            FontFamily="Azonix"
                             FontSize="8"
                             Foreground="Gray"
                             Text="Sign up"
