--- a/WpfApp2/View/MainUserControl/LoginUC.xaml
+++ b/WpfApp2/View/MainUserControl/LoginUC.xaml
@@ -9,7 +9,7 @@
     xmlns:viewmodel="clr-namespace:WpfApp2.ViewModel"
     d:DesignHeight="450"
     d:DesignWidth="800"
-    FontFamily="Azonix"
+    FontFamily="azonix"
     mc:Ignorable="d">
     <UserControl.Resources>
         <viewmodel:LoginUCViewModel x:Key="viewModel" />
@@ -35,7 +35,6 @@
                 Grid.Row="0"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
-                FontFamily="Azonix"
                 FontSize="25"
                 Foreground="DeepSkyBlue"
                 Text="auth" />
@@ -74,7 +73,6 @@
                         VerticalAlignment="Center"
                         materialDesign:HintAssist.Hint="{Binding Path=LoginHint}"
                         BorderBrush="DeepSkyBlue"
-                        FontFamily="Azonix"
                         FontSize="16"
                         Foreground="Gray" />
                 </StackPanel>
@@ -92,7 +90,6 @@
                         VerticalAlignment="Center"
                         materialDesign:HintAssist.Hint="{Binding Path=PasswordHint}"
                         BorderBrush="DeepSkyBlue"
-                        FontFamily="Azonix"
                         FontSize="16"
                         Foreground="Gray" />
                 </StackPanel>
@@ -110,7 +107,6 @@
                         <TextBlock
                             Margin="2,1,0,0"
                             VerticalAlignment="Center"
-                            FontFamily="Azonix"
                             FontSize="15"
                             Text="Sign in" />
                     </StackPanel>
@@ -131,7 +127,6 @@
                         <TextBlock
                             Margin="1,1,0,0"
                             VerticalAlignment="Center"
-                            FontFamily="Azonix"
                             FontSize="8"
                             Foreground="Gray"
                             Text="Sign up"
