--- a/WpfApp2/View/MainUserControl/SignUpUserControl.xaml
+++ b/WpfApp2/View/MainUserControl/SignUpUserControl.xaml
@@ -6,11 +6,130 @@
     xmlns:local="clr-namespace:WpfApp2.View.MainUserControl"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewmodel="clr-namespace:WpfApp2.ViewModel"
     d:DesignHeight="450"
     d:DesignWidth="800"
+    FontFamily="Azonix"
     mc:Ignorable="d">
+    <UserControl.Resources>
+        <viewmodel:LoginUCViewModel x:Key="viewModel" />
+    </UserControl.Resources>
     <Grid>
-        <Image Source="/Images/ui-bg-red.jpg" Stretch="UniformToFill" />
-        <Border />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="70" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Image
+            Grid.RowSpan="2"
+            Source="/Images/ui-bg-red.jpg"
+            Stretch="UniformToFill" />
+        <Button
+            Grid.Row="0"
+            Margin="0,5,0,0"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Top"
+            Cursor="Hand"
+            Style="{StaticResource MaterialDesignIconButton}">
+            <materialDesign:PackIcon Foreground="White" Kind="Close" />
+        </Button>
+        <Border
+            Width="140"
+            Height="40"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Background="#FFF4F6F8"
+            CornerRadius="20">
+            <TextBlock
+                Grid.Row="0"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                FontSize="25"
+                Foreground="#FFC27889"
+                Text="sign up" />
+        </Border>
+        <Border
+            Grid.Row="1"
+            Width="400"
+            Height="280"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Background="#FFF4F6F8"
+            CornerRadius="30"
+            Effect="{StaticResource MaterialDesignElevationShadow16}">
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                <StackPanel Orientation="Horizontal">
+                    <materialDesign:PackIcon
+                        Width="21"
+                        Height="21"
+                        Margin="0,2,2,0"
+                        Foreground="DeepSkyBlue"
+                        Kind="Person" />
+                    <TextBox
+                        Width="120"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        materialDesign:HintAssist.Hint="{Binding Path=LoginHint}"
+                        BorderBrush="DeepSkyBlue"
+                        FontSize="16"
+                        Foreground="Gray" />
+                </StackPanel>
+
+                <StackPanel Margin="0,5,0,7" Orientation="Horizontal">
+                    <materialDesign:PackIcon
+                        Width="21"
+                        Height="21"
+                        Margin="0,2,2,0"
+                        Foreground="DeepSkyBlue"
+                        Kind="Key" />
+                    <PasswordBox
+                        Width="120"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        materialDesign:HintAssist.Hint="{Binding Path=PasswordHint}"
+                        BorderBrush="DeepSkyBlue"
+                        FontSize="16"
+                        Foreground="Gray" />
+                </StackPanel>
+                <Button
+                    x:Name="SignInBtn"
+                    Width="83"
+                    Height="18"
+                    Margin="0,0,0,1"
+                    Padding="0"
+                    HorizontalAlignment="Center"
+                    Style="{StaticResource MaterialDesignFlatButton}">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon Kind="Login" />
+                        <TextBlock
+                            Margin="2,1,0,0"
+                            VerticalAlignment="Center"
+                            FontSize="15"
+                            Text="Sign in" />
+                    </StackPanel>
+                </Button>
+                <Button
+                    x:Name="SignUpBtn"
+                    Height="15"
+                    Padding="0"
+                    HorizontalAlignment="Center"
+                    Cursor="Hand"
+                    Style="{StaticResource MaterialDesignFlatButton}">
+                    <StackPanel Orientation="Horizontal">
+                        <materialDesign:PackIcon
+                            Width="10"
+                            Foreground="Gray"
+                            Kind="Register" />
+                        <TextBlock
+                            Margin="1,1,0,0"
+                            VerticalAlignment="Center"
+                            FontSize="8"
+                            Foreground="Gray"
+                            Text="Sign up"
+                            TextDecorations="Underline" />
+                    </StackPanel>
+                </Button>
+            </StackPanel>
+
+        </Border>
     </Grid>
 </UserControl>
