--- a/WpfApp2/View/MainUserControl/LoginUC.xaml
+++ b/WpfApp2/View/MainUserControl/LoginUC.xaml
@@ -74,7 +74,8 @@
                         materialDesign:HintAssist.Hint="{Binding Path=LoginHint}"
                         BorderBrush="DeepSkyBlue"
                         FontSize="16"
-                        Foreground="Gray" />
+                        Foreground="Gray"
+                        Text="{Binding Path=LoginField}" />
                 </StackPanel>
 
                 <StackPanel Margin="0,5,0,7" Orientation="Horizontal">
@@ -121,13 +122,13 @@
                     Style="{StaticResource MaterialDesignFlatButton}">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon
-                            Width="10"
+                            Width="14"
                             Foreground="Gray"
                             Kind="Register" />
                         <TextBlock
                             Margin="1,1,0,0"
                             VerticalAlignment="Center"
-                            FontSize="8"
+                            FontSize="13"
                             Foreground="Gray"
                             Text="Sign up"
                             TextDecorations="Underline" />
