--- a/WpfApp2/View/MainUserControl/SignUpUserControl.xaml
+++ b/WpfApp2/View/MainUserControl/SignUpUserControl.xaml
@@ -28,6 +28,7 @@
             Margin="0,5,0,0"
             HorizontalAlignment="Right"
             VerticalAlignment="Top"
+            Click="Button_Click"
             Cursor="Hand"
             Style="{StaticResource MaterialDesignIconButton}">
             <materialDesign:PackIcon Foreground="White" Kind="Close" />
@@ -62,69 +63,104 @@
                         Width="21"
                         Height="21"
                         Margin="0,2,2,0"
-                        Foreground="DeepSkyBlue"
+                        Foreground="#FFC27889"
                         Kind="Person" />
                     <TextBox
                         Width="120"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
                         materialDesign:HintAssist.Hint="{Binding Path=LoginHint}"
-                        BorderBrush="DeepSkyBlue"
+                        materialDesign:TextFieldAssist.UnderlineBrush="PaleVioletRed"
+                        BorderBrush="#FFC27889"
                         FontSize="16"
                         Foreground="Gray" />
                 </StackPanel>
 
-                <StackPanel Margin="0,5,0,7" Orientation="Horizontal">
+                <StackPanel Margin="23,5,0,0" Orientation="Horizontal">
+                    <TextBox
+                        Width="120"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        materialDesign:HintAssist.Hint="{Binding Path=LastNameHint}"
+                        materialDesign:TextFieldAssist.UnderlineBrush="PaleVioletRed"
+                        BorderBrush="#FFC27889"
+                        FontSize="16"
+                        Foreground="Gray" />
+                </StackPanel>
+
+
+
+                <StackPanel Margin="0,5,0,5" Orientation="Horizontal">
                     <materialDesign:PackIcon
-                        Width="21"
-                        Height="21"
+                        Width="20"
+                        Height="20"
                         Margin="0,2,2,0"
-                        Foreground="DeepSkyBlue"
+                        Foreground="#FFC27889"
+                        Kind="Calendar" />
+                    <TextBox
+                        Width="120"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        materialDesign:HintAssist.Hint="{Binding Path=AgeHint}"
+                        materialDesign:TextFieldAssist.UnderlineBrush="PaleVioletRed"
+                        BorderBrush="#FFC27889"
+                        FontSize="16"
+                        Foreground="Gray" />
+                </StackPanel>
+                <StackPanel Margin="0,0,0,5" Orientation="Horizontal">
+                    <materialDesign:PackIcon
+                        Width="20"
+                        Height="20"
+                        Margin="0,2,2,0"
+                        Foreground="#FFC27889"
                         Kind="Key" />
                     <PasswordBox
                         Width="120"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
                         materialDesign:HintAssist.Hint="{Binding Path=PasswordHint}"
-                        BorderBrush="DeepSkyBlue"
+                        materialDesign:TextFieldAssist.UnderlineBrush="PaleVioletRed"
+                        BorderBrush="#FFC27889"
                         FontSize="16"
                         Foreground="Gray" />
                 </StackPanel>
                 <Button
                     x:Name="SignInBtn"
-                    Width="83"
+                    Width="87"
                     Height="18"
                     Margin="0,0,0,1"
                     Padding="0"
                     HorizontalAlignment="Center"
                     Style="{StaticResource MaterialDesignFlatButton}">
                     <StackPanel Orientation="Horizontal">
-                        <materialDesign:PackIcon Kind="Login" />
+                        <materialDesign:PackIcon Foreground="#FFC27889" Kind="Login" />
                         <TextBlock
                             Margin="2,1,0,0"
                             VerticalAlignment="Center"
                             FontSize="15"
-                            Text="Sign in" />
+                            Foreground="#FFC27889"
+                            Text="Sign up" />
                     </StackPanel>
                 </Button>
                 <Button
-                    x:Name="SignUpBtn"
+                    x:Name="BackBtn"
                     Height="15"
                     Padding="0"
                     HorizontalAlignment="Center"
+                    Click="BackBtn_Click"
                     Cursor="Hand"
                     Style="{StaticResource MaterialDesignFlatButton}">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon
-                            Width="10"
+                            Width="14"
                             Foreground="Gray"
-                            Kind="Register" />
+                            Kind="ArrowBack" />
                         <TextBlock
                             Margin="1,1,0,0"
                             VerticalAlignment="Center"
-                            FontSize="8"
+                            FontSize="13"
                             Foreground="Gray"
-                            Text="Sign up"
+                            Text="BACK"
                             TextDecorations="Underline" />
                     </StackPanel>
                 </Button>
