--- a/WpfApp2/View/MainUserControl/SignUpUserControl.xaml
+++ b/WpfApp2/View/MainUserControl/SignUpUserControl.xaml
@@ -57,115 +57,144 @@
             Background="#FFF4F6F8"
             CornerRadius="30"
             Effect="{StaticResource MaterialDesignElevationShadow16}">
-            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-                <StackPanel Orientation="Horizontal">
-                    <materialDesign:PackIcon
-                        Width="21"
-                        Height="21"
-                        Margin="0,2,2,0"
-                        Foreground="#FFC27889"
-                        Kind="Person" />
-                    <TextBox
-                        Width="120"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        materialDesign:HintAssist.Hint="{Binding Path=LoginHint}"
-                        materialDesign:TextFieldAssist.UnderlineBrush="PaleVioletRed"
-                        BorderBrush="#FFC27889"
-                        FontSize="16"
-                        Foreground="Gray" />
-                </StackPanel>
-
-                <StackPanel Margin="23,5,0,0" Orientation="Horizontal">
-                    <TextBox
-                        Width="120"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        materialDesign:HintAssist.Hint="{Binding Path=LastNameHint}"
-                        materialDesign:TextFieldAssist.UnderlineBrush="PaleVioletRed"
-                        BorderBrush="#FFC27889"
-                        FontSize="16"
-                        Foreground="Gray" />
-                </StackPanel>
-
-
-
-                <StackPanel Margin="0,5,0,5" Orientation="Horizontal">
-                    <materialDesign:PackIcon
-                        Width="20"
-                        Height="20"
-                        Margin="0,2,2,0"
-                        Foreground="#FFC27889"
-                        Kind="Calendar" />
-                    <TextBox
-                        Width="120"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        materialDesign:HintAssist.Hint="{Binding Path=AgeHint}"
-                        materialDesign:TextFieldAssist.UnderlineBrush="PaleVioletRed"
-                        BorderBrush="#FFC27889"
-                        FontSize="16"
-                        Foreground="Gray" />
-                </StackPanel>
-                <StackPanel Margin="0,0,0,5" Orientation="Horizontal">
-                    <materialDesign:PackIcon
-                        Width="20"
-                        Height="20"
-                        Margin="0,2,2,0"
-                        Foreground="#FFC27889"
-                        Kind="Key" />
-                    <PasswordBox
-                        Width="120"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        materialDesign:HintAssist.Hint="{Binding Path=PasswordHint}"
-                        materialDesign:TextFieldAssist.UnderlineBrush="PaleVioletRed"
-                        BorderBrush="#FFC27889"
-                        FontSize="16"
-                        Foreground="Gray" />
-                </StackPanel>
-                <Button
-                    x:Name="SignInBtn"
-                    Width="87"
-                    Height="18"
-                    Margin="0,0,0,1"
-                    Padding="0"
-                    HorizontalAlignment="Center"
-                    Style="{StaticResource MaterialDesignFlatButton}">
-                    <StackPanel Orientation="Horizontal">
-                        <materialDesign:PackIcon Foreground="#FFC27889" Kind="Login" />
-                        <TextBlock
-                            Margin="2,1,0,0"
-                            VerticalAlignment="Center"
-                            FontSize="15"
-                            Foreground="#FFC27889"
-                            Text="Sign up" />
-                    </StackPanel>
-                </Button>
-                <Button
-                    x:Name="BackBtn"
-                    Height="15"
-                    Padding="0"
-                    HorizontalAlignment="Center"
-                    Click="BackBtn_Click"
-                    Cursor="Hand"
-                    Style="{StaticResource MaterialDesignFlatButton}">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="209*" />
+                    <RowDefinition Height="71*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="1*" />
+                </Grid.ColumnDefinitions>
+                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon
-                            Width="14"
-                            Foreground="Gray"
-                            Kind="ArrowBack" />
-                        <TextBlock
-                            Margin="1,1,0,0"
+                            Width="21"
+                            Height="21"
+                            Margin="0,2,2,0"
+                            Foreground="#FFC27889"
+                            Kind="Person" />
+                        <TextBox
+                            Width="120"
+                            HorizontalAlignment="Center"
                             VerticalAlignment="Center"
-                            FontSize="13"
-                            Foreground="Gray"
-                            Text="BACK"
-                            TextDecorations="Underline" />
+                            materialDesign:HintAssist.Hint="{Binding Path=LoginHint}"
+                            materialDesign:TextFieldAssist.UnderlineBrush="PaleVioletRed"
+                            BorderBrush="#FFC27889"
+                            FontSize="16"
+                            Foreground="Gray" />
                     </StackPanel>
-                </Button>
-            </StackPanel>
 
+                    <StackPanel Margin="23,5,0,0" Orientation="Horizontal">
+                        <TextBox
+                            Width="120"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            materialDesign:HintAssist.Hint="{Binding Path=LastNameHint}"
+                            materialDesign:TextFieldAssist.UnderlineBrush="PaleVioletRed"
+                            BorderBrush="#FFC27889"
+                            FontSize="16"
+                            Foreground="Gray" />
+                    </StackPanel>
+
+
+
+                    <StackPanel Margin="0,5,0,5" Orientation="Horizontal">
+                        <materialDesign:PackIcon
+                            Width="20"
+                            Height="20"
+                            Margin="0,2,2,0"
+                            Foreground="#FFC27889"
+                            Kind="Calendar" />
+                        <TextBox
+                            Width="120"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            materialDesign:HintAssist.Hint="{Binding Path=AgeHint}"
+                            materialDesign:TextFieldAssist.UnderlineBrush="PaleVioletRed"
+                            BorderBrush="#FFC27889"
+                            FontSize="16"
+                            Foreground="Gray" />
+                    </StackPanel>
+                    <StackPanel Margin="0,0,0,5" Orientation="Horizontal">
+                        <materialDesign:PackIcon
+                            Width="20"
+                            Height="20"
+                            Margin="0,2,2,0"
+                            Foreground="#FFC27889"
+                            Kind="Key" />
+                        <PasswordBox
+                            Width="120"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            materialDesign:HintAssist.Hint="{Binding Path=PasswordHint}"
+                            materialDesign:TextFieldAssist.UnderlineBrush="PaleVioletRed"
+                            BorderBrush="#FFC27889"
+                            FontSize="16"
+                            Foreground="Gray" />
+                    </StackPanel>
+                </StackPanel>
+
+                <Border
+                    Grid.Column="1"
+                    Height="120"
+                    Margin="40"
+                    CornerRadius="60">
+                    <Border.Background>
+                        <ImageBrush
+                            x:Name="borderProfileImage"
+                            ImageSource="/Images/load-photo-bg.png"
+                            Stretch="UniformToFill" />
+                    </Border.Background>
+                </Border>
+                <StackPanel
+                    Grid.Row="1"
+                    Grid.ColumnSpan="2"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Top"
+                    Orientation="Vertical">
+                    <Button
+                        x:Name="SignUnBtn"
+                        Width="87"
+                        Height="18"
+                        Margin="0,0,0,1"
+                        Padding="0"
+                        HorizontalAlignment="Center"
+                        Style="{StaticResource MaterialDesignFlatSecondaryLightButton}">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Foreground="#FFC27889" Kind="Login" />
+                            <TextBlock
+                                Margin="2,1,0,0"
+                                VerticalAlignment="Center"
+                                FontSize="15"
+                                Foreground="#FFC27889"
+                                Text="Sign up" />
+                        </StackPanel>
+                    </Button>
+                    <Button
+                        x:Name="BackBtn"
+                        Height="15"
+                        Padding="0"
+                        HorizontalAlignment="Center"
+                        Click="BackBtn_Click"
+                        Cursor="Hand"
+                        Style="{StaticResource MaterialDesignFlatSecondaryLightButton}">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon
+                                Width="14"
+                                Foreground="Gray"
+                                Kind="ArrowBack" />
+                            <TextBlock
+                                Margin="1,1,0,0"
+                                VerticalAlignment="Center"
+                                FontSize="13"
+                                Foreground="Gray"
+                                Text="BACK"
+                                TextDecorations="Underline" />
+                        </StackPanel>
+                    </Button>
+                </StackPanel>
+            </Grid>
         </Border>
     </Grid>
 </UserControl>
