--- a/WpfApp2/View/MainUserControl/SignUpUserControl.xaml
+++ b/WpfApp2/View/MainUserControl/SignUpUserControl.xaml
@@ -118,9 +118,9 @@
                     </StackPanel>
                     <StackPanel Margin="0,0,0,5" Orientation="Horizontal">
                         <materialDesign:PackIcon
-                            Width="20"
-                            Height="20"
-                            Margin="0,2,2,0"
+                            Width="19"
+                            Height="19"
+                            Margin="0,3,2,0"
                             Foreground="#FFC27889"
                             Kind="Key" />
                         <PasswordBox
@@ -139,7 +139,9 @@
                     Grid.Column="1"
                     Height="120"
                     Margin="40"
-                    CornerRadius="60">
+                    AllowDrop="True"
+                    CornerRadius="60"
+                    Drop="Border_Drop">
                     <Border.Background>
                         <ImageBrush
                             x:Name="borderProfileImage"
