--- a/WpfApp2/View/MainUserControl/SignUpUserControl.xaml
+++ b/WpfApp2/View/MainUserControl/SignUpUserControl.xaml
@@ -59,14 +59,20 @@
             Effect="{StaticResource MaterialDesignElevationShadow16}">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="209*" />
-                    <RowDefinition Height="71*" />
+                    <RowDefinition Height="185*" />
+                    <RowDefinition Height="57*" />
+                    <RowDefinition Height="38*" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*" />
                     <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
-                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                <StackPanel
+                    Width="144"
+                    Height="121"
+                    Margin="0,44,0,0"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Top">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon
                             Width="21"
@@ -137,15 +143,23 @@
 
                 <Border
                     Grid.Column="1"
-                    Height="120"
-                    Margin="40"
+                    Margin="40,44,40,21"
                     AllowDrop="True"
                     CornerRadius="60"
-                    Drop="Border_Drop">
+                    Drop="Border_Drop"
+                    Effect="{StaticResource MaterialDesignShadowDepth2}">
+                    <Button
+                        x:Name="loadPictureBtn"
+                        Width="120"
+                        Height="120"
+                        Click="loadPictureBtn_Click"
+                        Cursor="Hand"
+                        Style="{StaticResource MaterialDesignIconForegroundButton}"
+                        Visibility="Visible" />
                     <Border.Background>
                         <ImageBrush
                             x:Name="borderProfileImage"
-                            ImageSource="/Images/load-photo-bg.png"
+                            ImageSource="{Binding Path=ImageField}"
                             Stretch="UniformToFill" />
                     </Border.Background>
                 </Border>
