--- a/WpfApp2/View/MainUserControl/SignUpUserControl.xaml
+++ b/WpfApp2/View/MainUserControl/SignUpUserControl.xaml
@@ -9,7 +9,7 @@
     xmlns:viewmodel="clr-namespace:WpfApp2.ViewModel"
     d:DesignHeight="450"
     d:DesignWidth="800"
-    FontFamily="Azonix"
+    FontFamily="Arial Rounded MT"
     mc:Ignorable="d">
     <UserControl.Resources>
         <viewmodel:LoginUCViewModel x:Key="viewModel" />
@@ -46,7 +46,7 @@
                 VerticalAlignment="Center"
                 FontSize="25"
                 Foreground="#FFC27889"
-                Text="sign up" />
+                Text="SIGN UP" />
         </Border>
         <Border
             Grid.Row="1"
@@ -61,18 +61,15 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="185*" />
                     <RowDefinition Height="57*" />
-                    <RowDefinition Height="38*" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*" />
                     <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
                 <StackPanel
-                    Width="144"
-                    Height="121"
-                    Margin="0,44,0,0"
+                    Margin="30,0,0,0"
                     HorizontalAlignment="Center"
-                    VerticalAlignment="Top">
+                    VerticalAlignment="Center">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon
                             Width="21"
@@ -85,6 +82,17 @@
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
                             materialDesign:HintAssist.Hint="{Binding Path=LoginHint}"
+                            materialDesign:TextFieldAssist.UnderlineBrush="PaleVioletRed"
+                            BorderBrush="#FFC27889"
+                            FontSize="16"
+                            Foreground="Gray" />
+                    </StackPanel>
+                    <StackPanel Margin="23,5,0,0" Orientation="Horizontal">
+                        <TextBox
+                            Width="120"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            materialDesign:HintAssist.Hint="{Binding Path=FirstNameHint}"
                             materialDesign:TextFieldAssist.UnderlineBrush="PaleVioletRed"
                             BorderBrush="#FFC27889"
                             FontSize="16"
@@ -109,7 +117,7 @@
                         <materialDesign:PackIcon
                             Width="20"
                             Height="20"
-                            Margin="0,2,2,0"
+                            Margin="0,2,3,0"
                             Foreground="#FFC27889"
                             Kind="Calendar" />
                         <TextBox
@@ -126,7 +134,7 @@
                         <materialDesign:PackIcon
                             Width="19"
                             Height="19"
-                            Margin="0,3,2,0"
+                            Margin="0,3,4,0"
                             Foreground="#FFC27889"
                             Kind="Key" />
                         <PasswordBox
@@ -143,7 +151,9 @@
 
                 <Border
                     Grid.Column="1"
-                    Margin="40,44,40,21"
+                    Margin="40"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
                     AllowDrop="True"
                     CornerRadius="60"
                     Drop="Border_Drop"
@@ -178,13 +188,16 @@
                         HorizontalAlignment="Center"
                         Style="{StaticResource MaterialDesignFlatSecondaryLightButton}">
                         <StackPanel Orientation="Horizontal">
-                            <materialDesign:PackIcon Foreground="#FFC27889" Kind="Login" />
+                            <materialDesign:PackIcon
+                                Margin="0,2,0,0"
+                                Foreground="#FFC27889"
+                                Kind="Login" />
                             <TextBlock
                                 Margin="2,1,0,0"
                                 VerticalAlignment="Center"
                                 FontSize="15"
                                 Foreground="#FFC27889"
-                                Text="Sign up" />
+                                Text="SIGN UP" />
                         </StackPanel>
                     </Button>
                     <Button
