--- a/WpfApp2/View/MainUserControl/LoginUC.xaml
+++ b/WpfApp2/View/MainUserControl/LoginUC.xaml
@@ -9,7 +9,7 @@
     xmlns:viewmodel="clr-namespace:WpfApp2.ViewModel"
     d:DesignHeight="450"
     d:DesignWidth="800"
-    FontFamily="azonix"
+    FontFamily="Arial Rounded MT"
     mc:Ignorable="d">
     <UserControl.Resources>
         <viewmodel:LoginUCViewModel x:Key="viewModel" />
@@ -37,7 +37,7 @@
                 VerticalAlignment="Center"
                 FontSize="25"
                 Foreground="DeepSkyBlue"
-                Text="auth" />
+                Text="AUTH" />
         </Border>
 
         <Button
@@ -97,24 +97,25 @@
                 <Button
                     x:Name="SignInBtn"
                     Width="83"
-                    Height="18"
+                    Height="19"
                     Margin="0,0,0,1"
                     Padding="0"
                     HorizontalAlignment="Center"
                     Click="SignInBtn_Click"
+                    Cursor="Hand"
                     Style="{StaticResource MaterialDesignFlatButton}">
                     <StackPanel Orientation="Horizontal">
-                        <materialDesign:PackIcon Kind="Login" />
+                        <materialDesign:PackIcon Margin="0,2,0,0" Kind="Login" />
                         <TextBlock
                             Margin="2,1,0,0"
                             VerticalAlignment="Center"
                             FontSize="15"
-                            Text="Sign in" />
+                            Text="SIGN IN" />
                     </StackPanel>
                 </Button>
                 <Button
                     x:Name="SignUpBtn"
-                    Height="15"
+                    Height="17"
                     Padding="0"
                     HorizontalAlignment="Center"
                     Click="SignUpBtn_Click"
@@ -130,7 +131,7 @@
                             VerticalAlignment="Center"
                             FontSize="13"
                             Foreground="Gray"
-                            Text="Sign up"
+                            Text="SIGN UP"
                             TextDecorations="Underline" />
                     </StackPanel>
                 </Button>
