--- a/WpfApp2/View/MainUserControl/LoginUserControl.xaml
+++ b/WpfApp2/View/MainUserControl/LoginUserControl.xaml
@@ -6,18 +6,18 @@
     xmlns:local="clr-namespace:WpfApp2.View.MainUserControl"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-    d:DesignHeight="600"
-    d:DesignWidth="500"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    FontFamily="Arial Rounded MT Bold"
     mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="70"/>
-            <RowDefinition Height="450"/>
-            <RowDefinition Height="70*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         
         <Image Source="/Images/ui-bg-green.jpg"
-               Grid.RowSpan="3"
+               Grid.RowSpan="2"
                Stretch="UniformToFill"/>
 
         <!--ЧТО ДЕЛАТЬ? Binding Path kak?-->
@@ -33,7 +33,7 @@
                 VerticalAlignment="Center"
                 FontSize="25"
                 Foreground="#FF7BCE49"
-                Text="Profile" />
+                Text="PROFILE" />
         </Border>
         <Button
             Grid.Row="0"
@@ -44,16 +44,32 @@
             Style="{StaticResource MaterialDesignIconButton}">
             <materialDesign:PackIcon Foreground="White" Kind="Close" />
         </Button>
+        <Border Grid.Row="1"
+                Background="White"
+                Width="400"
+                Height="280"
+                CornerRadius="30"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center">
+            
+        </Border>
         <StackPanel HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     Orientation="Vertical"
                     Grid.Row="1">
-            <Image Source="/Images/user-image.jpeg" 
-                   Width="180"
-                   Margin="0 0 0 30"
-                   VerticalAlignment="Top"/>
+            <Border CornerRadius="80"
+                    Grid.Row="1"
+                    Width="120"
+                    Height="120"
+                    Effect="{StaticResource MaterialDesignElevationShadow6}">
+                <Border.Background>
+                    <ImageBrush ImageSource="/Images/user-image.jpeg"
+                                Stretch="UniformToFill"/>
+                </Border.Background>
+            </Border>
+
             <TextBlock Text="Login"
-                       Margin="0 0 0 5"
+                       Margin="0 5 0 5"
                        FontWeight="Bold"
                        FontSize="14"/>
             <TextBlock Text="Name LastName"
@@ -67,23 +83,25 @@
                                          Margin="0 0 2 0"/>
                 <TextBlock Text="RegistrationDate"/>
             </StackPanel>
+            <Button
+                    Width="100"
+                    Height="18"
+                    Margin="0,6,0,1"
+                    Padding="0"
+                    HorizontalAlignment="Center"
+                    Style="{StaticResource MaterialDesignFlatButton}">
+                <StackPanel Orientation="Horizontal">
+                    <materialDesign:PackIcon Kind="Logout"
+                                             Margin="0 2 0 0"
+                                             Foreground="#FF7BCE49"/>
+                    <TextBlock
+                            Margin="2,1,0,0"
+                            VerticalAlignment="Center"
+                            Foreground="#FF7BCE49"
+                            FontSize="15"
+                            Text="SIGN OUT" />
+                </StackPanel>
+            </Button>
         </StackPanel>
-        <Border
-            Width="150"
-            Height="40"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            Background="#FFF6F8F4"
-            CornerRadius="20"
-            Grid.Row="2">
-            <StackPanel Orientation="Horizontal"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center">
-                <materialDesign:PackIcon Kind="SignOut"/>
-                <Button>
-                    
-                </Button>
-            </StackPanel>
-        </Border>
     </Grid>
 </UserControl>
